--- a/aboutus.html
+++ b/aboutus.html
@@ -423,29 +423,35 @@
               </div>
               <div class="aboutus__right">
                 <div class="aboutus__one_block">
+                  <div class="aboutus__one_lines one">
+                    <div class="aboutus__one_line_one"><span></span><span></span><span></span><span></span><span></span></div>
+                    <div class="aboutus__one_line_two"><span></span><span></span><span></span><span></span><span></span></div>
+                    <div class="aboutus__one_line_three"><span></span><span></span><span></span><span></span><span></span></div>
+                    <div class="aboutus__one_line_four"><span></span><span></span><span></span><span></span><span></span></div>
+                  </div>
                   <div class="aboutus__bird">
                     <img src="img/icon/aboutus/bird.svg" alt="">
                   </div>
                   <div class="aboutus__one_list">
                     <div class="aboutus__one_flex aboutus__one_one">
                       <img src="img/icon/aboutus/linux.svg" class="aboutus__one_image" alt="icon">
-                      <p class="aboutus__head body_caption">Linux</p>
-                      <p class="aboutus__desc body_caption">13 FTE</p>
+                      <p class="aboutus__heading body_caption">Linux</p>
+                      <p class="aboutus__description body_caption">13 FTE</p>
                     </div>
                     <div class="aboutus__one_flex aboutus__one_two">
                       <img src="img/icon/aboutus/android.svg" class="aboutus__one_image" alt="icon">
-                      <p class="aboutus__head body_caption">Android</p>
-                      <p class="aboutus__desc body_caption">10 FTE</p>
+                      <p class="aboutus__heading body_caption">Android</p>
+                      <p class="aboutus__description body_caption">10 FTE</p>
                     </div>
                     <div class="aboutus__one_flex aboutus__one_three">
                       <img src="img/icon/aboutus/web.svg" class="aboutus__one_image" alt="icon">
-                      <p class="aboutus__head body_caption">Web</p>
-                      <p class="aboutus__desc body_caption">10 FTE</p>
+                      <p class="aboutus__heading body_caption">Web</p>
+                      <p class="aboutus__description body_caption">10 FTE</p>
                     </div>
                     <div class="aboutus__one_flex aboutus__one_four">
                       <img src="img/icon/aboutus/faq.svg" class="aboutus__one_image" alt="icon">
-                      <p class="aboutus__head body_caption">Сопровождение</p>
-                      <p class="aboutus__desc body_caption">10 FTE</p>
+                      <p class="aboutus__heading body_caption">Сопровождение</p>
+                      <p class="aboutus__description body_caption">10 FTE</p>
                     </div>
                   </div>
                   <div class="aboutus__birds_fte">
@@ -480,6 +486,13 @@
               </div>
               <div class="aboutus__right">
                 <div class="aboutus__two_block">
+                  <div class="aboutus__two_lines">
+                    <div class="aboutus__two_line_one"><span></span><span></span></div>
+                    <div class="aboutus__two_line_two"><span></span></div>
+                    <div class="aboutus__two_line_three"><span></span><span></span></div>
+                    <div class="aboutus__two_line_four"><span></span><span></span></div>
+                    <div class="aboutus__two_line_five"><span></span><span></span></div>
+                  </div>
                   <div class="aboutus__two_top">
                     <div class="aboutus__two_flex aboutus__two_two">
                       <img src="img/icon/aboutus/tieto.svg" class="aboutus__two_image" alt="icon">
@@ -531,6 +544,10 @@
               </div>
               <div class="aboutus__right">
                 <div class="aboutus__three_block">
+                  <div class="aboutus__three_lines">
+                    <div class="aboutus__three_line_one"><span></span><span></span></div>
+                    <div class="aboutus__three_line_two"><span></span><span></span></div>
+                  </div>
                   <div class="aboutus__three_flex aboutus__three_one">
                     <img src="img/icon/aboutus/tlinux.svg" class="aboutus__three_image" alt="icon">
                   </div>
@@ -569,29 +586,35 @@
               </div>
               <div class="aboutus__right">
                 <div class="aboutus__four_block">
+                  <div class="aboutus__four_lines">
+                    <div class="aboutus__four_line_one"><span></span><span></span><span></span></div>
+                    <div class="aboutus__four_line_two"><span></span><span></span><span></span></div>
+                    <div class="aboutus__four_line_three"><span></span><span></span><span></span></div>
+                    <div class="aboutus__four_line_four"><span></span><span></span><span></span></div>
+                  </div>
                   <div class="aboutus__four_tech">
                     <p class="text_color body_caption">Технологии</p>
                   </div>
                   <div class="aboutus__four_lists">
                     <div class="aboutus__four_flex aboutus__four_one">
                       <img src="img/icon/aboutus/star.svg" class="aboutus__four_image" alt="icon">
-                      <p class="aboutus__head body_caption">Архитектура</p>
-                      <p class="aboutus__desc body_caption">Микросервисы</p>
+                      <p class="aboutus__heading body_caption">Архитектура</p>
+                      <p class="aboutus__description body_caption">Микросервисы</p>
                     </div>
                     <div class="aboutus__four_flex aboutus__four_two">
                       <img src="img/icon/aboutus/scob.svg" class="aboutus__four_image" alt="icon">
-                      <p class="aboutus__head body_caption">Стек</p>
-                      <p class="aboutus__desc body_caption">С, С++, Java, Kotlin,Erlang, PostgresPro</p>
+                      <p class="aboutus__heading body_caption">Стек</p>
+                      <p class="aboutus__description body_caption">С, С++, Java, Kotlin,Erlang, PostgresPro</p>
                     </div>
                     <div class="aboutus__four_flex aboutus__four_three">
                       <img src="img/icon/aboutus/cube.svg" class="aboutus__four_image" alt="icon">
-                      <p class="aboutus__head body_caption">Многоуровневый кластер</p>
-                      <p class="aboutus__desc body_caption">серверов в ЦОД</p>
+                      <p class="aboutus__heading body_caption">Многоуровневый кластер</p>
+                      <p class="aboutus__description body_caption">серверов в ЦОД</p>
                     </div>
                     <div class="aboutus__four_flex aboutus__four_four">
                       <img src="img/icon/aboutus/part.svg" class="aboutus__four_image" alt="icon">
-                      <p class="aboutus__head body_caption">Инструменты</p>
-                      <p class="aboutus__desc body_caption">Jira, Jenkins, Confluence, Bitbucket</p>
+                      <p class="aboutus__heading body_caption">Инструменты</p>
+                      <p class="aboutus__description body_caption">Jira, Jenkins, Confluence, Bitbucket</p>
                     </div>
                   </div>
                 </div>
@@ -660,6 +683,16 @@
                     <div class="aboutus__five_flex aboutus__five_one">
                       <img src="img/icon/aboutus/retai.svg" class="aboutus__five_image" alt="icon">
                     </div>
+                  </div>
+                  <div class="aboutus__five_lines">
+                    <div class="aboutus__five_line_one"><span></span></div>
+                    <div class="aboutus__five_line_two"><span></span><span></span></div>
+                    <div class="aboutus__five_line_three"><span></span><span></span></div>
+                    <div class="aboutus__five_line_four"><span></span></div>
+                    <div class="aboutus__five_line_five"><span></span></div>
+                    <div class="aboutus__five_line_six"><span></span><span></span></div>
+                    <div class="aboutus__five_line_seven"><span></span><span></span></div>
+                    <div class="aboutus__five_line_eight"><span></span></div>
                   </div>
                 </div>
               </div>
