--- a/aboutus.html
+++ b/aboutus.html
@@ -422,8 +422,8 @@
                 </div>
               </div>
               <div class="aboutus__right">
-                <div class="aboutus__one_block">
-                  <div class="aboutus__one_lines one">
+                <div class="aboutus__one_block" id="aboutus__one">
+                  <div class="aboutus__one_lines">
                     <div class="aboutus__one_line_one"><span></span><span></span><span></span><span></span><span></span></div>
                     <div class="aboutus__one_line_two"><span></span><span></span><span></span><span></span><span></span></div>
                     <div class="aboutus__one_line_three"><span></span><span></span><span></span><span></span><span></span></div>
@@ -485,7 +485,7 @@
                 </div>
               </div>
               <div class="aboutus__right">
-                <div class="aboutus__two_block">
+                <div class="aboutus__two_block" id="aboutus__two">
                   <div class="aboutus__two_lines">
                     <div class="aboutus__two_line_one"><span></span><span></span></div>
                     <div class="aboutus__two_line_two"><span></span></div>
@@ -543,7 +543,7 @@
                 </div>
               </div>
               <div class="aboutus__right">
-                <div class="aboutus__three_block">
+                <div class="aboutus__three_block" id="aboutus__three">
                   <div class="aboutus__three_lines">
                     <div class="aboutus__three_line_one"><span></span><span></span></div>
                     <div class="aboutus__three_line_two"><span></span><span></span></div>
@@ -585,7 +585,7 @@
                 </div>
               </div>
               <div class="aboutus__right">
-                <div class="aboutus__four_block">
+                <div class="aboutus__four_block" id="aboutus__four">
                   <div class="aboutus__four_lines">
                     <div class="aboutus__four_line_one"><span></span><span></span><span></span></div>
                     <div class="aboutus__four_line_two"><span></span><span></span><span></span></div>
@@ -645,7 +645,7 @@
                 </div>
               </div>
               <div class="aboutus__right">
-                <div class="aboutus__five_block">
+                <div class="aboutus__five_block" id="aboutus__five">
                   <div class="aboutus__five_lists">
                     <div class="aboutus__five_flex aboutus__five_one">
                       <img src="img/icon/aboutus/kassa.svg" class="aboutus__five_image" alt="icon">
