--- a/aboutus.html
+++ b/aboutus.html
@@ -422,7 +422,7 @@
                 </div>
               </div>
               <div class="aboutus__right">
-                <div class="aboutus__one_block" id="aboutus__one">
+                <div class="aboutus__one_block four" id="aboutus__one">
                   <div class="aboutus__one_lines">
                     <div class="aboutus__one_line_one"><span></span><span></span><span></span><span></span><span></span></div>
                     <div class="aboutus__one_line_two"><span></span><span></span><span></span><span></span><span></span></div>
@@ -652,35 +652,35 @@
                     </div>
                   </div>
                   <div class="aboutus__five_lists">
-                    <div class="aboutus__five_flex aboutus__five_one">
+                    <div class="aboutus__five_flex aboutus__five_two">
                       <img src="img/icon/aboutus/iiko.svg" class="aboutus__five_image" alt="icon">
                     </div>
-                    <div class="aboutus__five_flex aboutus__five_one">
+                    <div class="aboutus__five_flex aboutus__five_three">
                       <img src="img/icon/aboutus/1c.svg" class="aboutus__five_image" alt="icon">
                     </div>
                   </div>
                   <div class="aboutus__five_lists">
-                    <div class="aboutus__five_flex aboutus__five_one">
+                    <div class="aboutus__five_flex aboutus__five_four">
                       <img src="img/icon/aboutus/keeper.svg" class="aboutus__five_image" alt="icon">
                     </div>
                     <div class="aboutus__five_inter">
                       <p class="text_color body_caption">Интеграции</p>
                       <p class="body_caption">с лидерами кассовых решений на рынке</p>
                     </div>
-                    <div class="aboutus__five_flex aboutus__five_one">
+                    <div class="aboutus__five_flex aboutus__five_five">
                       <img src="img/icon/aboutus/evotor.svg" class="aboutus__five_image" alt="icon">
                     </div>
                   </div>
                   <div class="aboutus__five_lists">
-                    <div class="aboutus__five_flex aboutus__five_one">
+                    <div class="aboutus__five_flex aboutus__five_six">
                       <img src="img/icon/aboutus/pro.svg" class="aboutus__five_image" alt="icon">
                     </div>
-                    <div class="aboutus__five_flex aboutus__five_one">
+                    <div class="aboutus__five_flex aboutus__five_seven">
                       <img src="img/icon/aboutus/shtrih.svg" class="aboutus__five_image" alt="icon">
                     </div>
                   </div>
                   <div class="aboutus__five_lists">
-                    <div class="aboutus__five_flex aboutus__five_one">
+                    <div class="aboutus__five_flex aboutus__five_eight">
                       <img src="img/icon/aboutus/retai.svg" class="aboutus__five_image" alt="icon">
                     </div>
                   </div>
